--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,7 +57,7 @@ font-weight: bold;
 font-size:14px;
 border:none;
 qproperty-iconSize: 24px;
-color: #00acc8;
+color: #595959;
 }
 
 QPushButton:hover, QToolButton:hover {
@@ -481,7 +481,6 @@ width:40px;
 height:40px;
 border-radius: 20px;
 background-color: #f1f1f1;
-color: #00acc8;
 }
 
 QPushButton:hover, QToolButton:hover {
@@ -539,7 +538,7 @@ QToolButton::menu-indicator { image: none; }</string>
          </property>
          <property name="styleSheet">
           <string notr="true">padding: 0 5px;
-color: #00acc8;</string>
+color: #595959;</string>
          </property>
          <property name="text">
           <string>1</string>
